add basic structure to index.html and to style.css

--- a/index.html
+++ b/index.html
@@ -11,8 +11,40 @@
 <title>The Hikers</title>
 </head>
 <body>
+<header>
+<!---------------------- Site navigation ------------------------->
 
-Hello The Hikers
+</header>
+
+
+<section>
+ <!---------------------- Home/welcome page  ----------------------->
+
+</section>
+
+
+<section>
+<!------------------------ About/Tours page ------------------------>
+
+</section>
+
+
+<section>
+ <!------------------------ Gallery page ---------------------------->
+
+</section>
+
+
+<section>
+ <!---------------- Contact and Enquiry Form page ------------------->
+ 
+</section>
+
+
+
+<footer>
+
+</footer>
 
 
 
