add navbar styling and import new cropped logo image

--- a/index.html
+++ b/index.html
@@ -1,52 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="Enter your description here"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>The Hikers</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="Description"
+        content="The Hikers, Dublin based hiking group offering a variation of cheap guided tours around Ireland and much more" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>The Hikers</title>
 </head>
+
 <body>
-<header>
-<!---------------------- Site navigation ------------------------->
-
-</header>
-
-
-<section>
- <!---------------------- Home/welcome page  ----------------------->
-
-</section>
-
-
-<section>
-<!------------------------ About/Tours page ------------------------>
-
-</section>
-
-
-<section>
- <!------------------------ Gallery page ---------------------------->
-
-</section>
-
-
-<section>
- <!---------------- Contact and Enquiry Form page ------------------->
- 
-</section>
-
-
-
-<footer>
-
-</footer>
+    <header>
+        <!---------------------- Site navigation ------------------------->
+        <!------- CREDIT: navbar code customized from Bootstrap 4.5 ------->
+        <div class="container-fluid navalert-container">
+        <nav class="navbar navbar-expand-sm navbar-light fixed-top">
+            <a class="navbar-brand" href="index.html"><img class="logo" src="assets/images/logo.png"
+                    alt="The Hikers logo" aria-label="The hikers logo"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link underline" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link underline" href="#">About/Tours</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link underline" href="#">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link underline" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        </div>
+    </header>
 
 
+    <section>
+        <!---------------------- Home/welcome page  ----------------------->
+
+    </section>
+
+
+    <section>
+        <!------------------------ About/Tours page ------------------------>
+
+    </section>
+
+
+    <section>
+        <!------------------------ Gallery page ---------------------------->
+
+    </section>
+
+
+    <section>
+        <!---------------- Contact and Enquiry Form page ------------------->
+
+    </section>
+
+
+
+    <footer>
+
+    </footer>
 
 
 
@@ -56,8 +83,11 @@
 
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
