add footer, contact and social media links to index.html

--- a/index.html
+++ b/index.html
@@ -18,30 +18,30 @@
         <!---------------------- Site navigation ------------------------->
         <!------- CREDIT: navbar code customized from Bootstrap 4.5 ------->
         <div class="container-fluid navalert-container">
-        <nav class="navbar navbar-expand-sm navbar-light fixed-top">
-            <a class="navbar-brand" href="index.html"><img class="logo" src="assets/images/logo.png"
-                    alt="The Hikers logo" aria-label="The hikers logo"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link underline" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link underline" href="#">About/Tours</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link underline" href="#">Gallery</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link underline" href="#">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+            <nav class="navbar navbar-expand-sm navbar-light fixed-top">
+                <a class="navbar-brand" href="index.html"><img class="logo" src="assets/images/logo.png"
+                        alt="The Hikers logo" aria-label="The hikers logo"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link underline" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link underline" href="#">About/Tours</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link underline" href="#">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link underline" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
     </header>
 
@@ -71,9 +71,43 @@
 
 
 
-    <footer>
 
+    <footer>
+        <div class="contact">
+            <ul class="contact-links">
+                <li class="contact-links-item">
+                    <a href="mailto:thehikers@ireland.ie" aria-label="Our Email Address">
+                        <i class="fas fa-envelope" aria-hidden="true"></i>
+                        thehikers@ireland.ie
+                    </a>
+                </li>
+                <li class="contact-links-item">
+                    <a href="tel:+012345678" aria-label="Our Phone Number">
+                        <i class="fas fa-phone-alt" aria-hidden="true"></i>
+                        555 4657800
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <ul class="social-network">
+            <li>
+                <a href="https://www.facebook.com" target="_blank" aria-label="Find Us Facebook">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" aria-label="Find Us Twitter">
+                    <i class="fab fa-twitter"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" aria-label="Find Us Instagram">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </li>
+        </ul>
     </footer>
+
 
 
 
