add the content to index.html home page, about/tour page

--- a/index.html
+++ b/index.html
@@ -45,27 +45,99 @@
         </div>
     </header>
 
-
-    <section>
+    <section id="intro">
         <!---------------------- Home/welcome page  ----------------------->
-
+        <h1>Hiking In Ireland And Much More ...</h1>
+        <hr class="intro-dots">
+        <p>Travelling shouldn't be just a tour, <br>
+            It should be a tale. And we are striving to make it a very special one
+        </p>
     </section>
 
 
-    <section>
-        <!------------------------ About/Tours page ------------------------>
+    <!------------------------ About/Tours page ------------------------>
+    <section id="about">
+        <div class="container">
+            <div class="row heading-text">
+                <div class="col-12">
+                    <h2>About</h2>
+                </div>
+            </div>
+        </div>
 
+        <div class="container about-content">
+            <div class="row  content-item">
+                <div class="image">
+                    <div class="col-12 col-md-6">
+                        <div class="card">
+                            <img src="assets/images/team.jpg" alt="The hikers team" width="500" height="400">
+                            <div class="desc">Meet our team</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 content-item-text">
+                    <h3>Welcome to the Ireland hiking of our dreams, we hope yours too</h3>
+                    <p>If you love hiking, you are fascinated by wonderful views, looking for adventure and you would
+                        like to know more about
+                        the interesting history about Ireland, then you have come to the right place</p>
+                    <p>We are a small group of friends who are passionate about hiking in Ireland. We have walked the
+                        Irish mountains for many
+                        kilometers and each time it is an amazing and unforgettable experience for us.</p>
+                    <p>Our certified guide Arek and the main organizer who is passionate about the history of Ireland,
+                        can tell you many interesting stories about this beautiful, scenic and wonderful country.
+                    </p>
+                    <p>We hope to see you soon on one of our trips</p>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row content-item-text">
+                    <div class="col-12">
+                        <h2>Tour option to chose</h2>
+                        <p> We are organizing hiking tours from half day up to three days including a certified tour guide with a high sense of humor and include
+                            different variations for the trails in the region you choose to go to, depending on your time, desire, age and level of advancement,
+                            we will select and organize a trip for you. The price is estimated depending on the number of days you choose, season, accommodation 
+                            and food you choose. Contact us for more information. Tell us what you expect and we will organize a trip for you.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        <div class="card card-body">
+                            <img src="" class="card-picture" alt="">
+                            <div class="card-desc">
+                                ???
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card card-body">
+                            <img src="" class="card-picture" alt="">
+                            <div class="card-body-desc">
+                                ???
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="card card-body">
+                                <img src="" class="card-picture" alt="">
+                                <div class="card-body-desc">
+                                    ???
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </section>
-
-
-    <section>
-        <!------------------------ Gallery page ---------------------------->
-
-    </section>
-
+    <!------------------------ Gallery page ------------------------------>
 
     <section>
-        <!---------------- Contact and Enquiry Form page ------------------->
+    <!----------------- Contact and Enquiry Form page --------------------->
 
     </section>
 
