--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link underline" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link underline" id="navbar-color" href="#">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" href="#">About/Tours</a>
+                            <a class="nav-link underline" id="navbar-color href="#">About/Tours</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" href="#">Gallery</a>
+                            <a class="nav-link underline" id="navbar-color href="#">Gallery</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link underline" href="#">Contact</a>
@@ -45,14 +45,29 @@
         </div>
     </header>
 
-    <section id="intro">
-        <!---------------------- Home/welcome page  ----------------------->
-        <h1>Hiking In Ireland And Much More ...</h1>
-        <hr class="intro-dots">
-        <p>Travelling shouldn't be just a tour, <br>
-            It should be a tale. And we are striving to make it a very special one
-        </p>
+    <section id="welcome">
+    <!---------------------- Home/welcome page  ----------------------->
+    <!------- CREDIT: inspiration/code snipped from Whiskey project in Bootstrap ------->
+        <div class="container-fluid d-flex justify-content-center home-container">
+            <div class="row">
+                <div class="col-12">
+                    <div class=" welcome-sign">
+                    <div class="welcome jumbotron text-center ">
+                        <h1 class="welcome-sign-top">...Hiking In Ireland And Much More ...</h1>
+                        
+                        <p class="welcome-sign-bottom">Travelling shouldn't be just a tour, It should be a tale.<br>
+                         And we are striving to make it a very special one</p>
+
+                        <p class="welcome-sign-botom">
+                            <a class="btn btn-primary btn-lg" href="contact.html" role="button">Book a tour with us!</a>
+                        </p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+    
 
 
     <!------------------------ About/Tours page ------------------------>
@@ -94,25 +109,38 @@
                 <div class="row content-item-text">
                     <div class="col-12">
                         <h2>Tour option to chose</h2>
-                        <p> We are organizing hiking tours from half day up to three days including a certified tour guide with a high sense of humor and include
-                            different variations for the trails in the region you choose to go to, depending on your time, desire, age and level of advancement,
-                            we will select and organize a trip for you. The price is estimated depending on the number of days you choose, season, accommodation 
-                            and food you choose. Contact us for more information. Tell us what you expect and we will organize a trip for you.
+                        <p> We are organizing hiking tours from half day up to three days including a certified tour
+                            guide with a high sense of humor and include
+                            different variations for the trails in the region you choose to go to, depending on your
+                            time, desire, age and level of advancement,
+                            we will select and organize a trip for you. The price is estimated depending on the number
+                            of days you choose, season, accommodation
+                            and food you choose. Contact us for more information. Tell us what you expect and we will
+                            organize a trip for you.
                         </p>
                     </div>
                 </div>
             </div>
         </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-4">
-                        <div class="card card-body">
-                            <img src="" class="card-picture" alt="">
-                            <div class="card-desc">
-                                ???
-                            </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <div class="card card-body">
+                        <img src="" class="card-picture" alt="">
+                        <div class="card-desc">
+                            ???
                         </div>
                     </div>
+                </div>
+                <div class="col-4">
+                    <div class="card card-body">
+                        <img src="" class="card-picture" alt="">
+                        <div class="card-body-desc">
+                            ???
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-4">
                         <div class="card card-body">
                             <img src="" class="card-picture" alt="">
@@ -121,23 +149,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-4">
-                            <div class="card card-body">
-                                <img src="" class="card-picture" alt="">
-                                <div class="card-body-desc">
-                                    ???
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
+        </div>
     </section>
     <!------------------------ Gallery page ------------------------------>
 
     <section>
-    <!----------------- Contact and Enquiry Form page --------------------->
+        <!----------------- Contact and Enquiry Form page --------------------->
 
     </section>
 
