add images to folder images and more content to section about

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link underline" id="navbar-color-home" href="#">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color href="#">About/Tours</a>
+                            <a class="nav-link underline" id="navbar-color-about" href="#">About/Tours</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color href="#">Gallery</a>
+                            <a class="nav-link underline" id="navbar-color-gallery" href="#">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" href="#">Contact</a>
+                            <a class="nav-link underline" id="navbar-color-contact"  href="#">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -67,32 +67,30 @@
             </div>
         </div>
     </section>
-    
-
-
     <!------------------------ About/Tours page ------------------------>
     <section id="about">
-        <div class="container">
+       <div class="container ">
             <div class="row heading-text">
                 <div class="col-12">
-                    <h2>About</h2>
+                    <h1>About</h1>
                 </div>
             </div>
         </div>
 
         <div class="container about-content">
-            <div class="row  content-item">
+            <div class="about-content"></div>
+            <div class="row display-inline content-item">
                 <div class="image">
                     <div class="col-12 col-md-6">
                         <div class="card">
-                            <img src="assets/images/team.jpg" alt="The hikers team" width="500" height="400">
+                            <img src="assets/images/about-team.jpg" alt="The hikers team">
                             <div class="desc">Meet our team</div>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-md-6 content-item-text">
-                    <h3>Welcome to the Ireland hiking of our dreams, we hope yours too</h3>
+                    <h3><strong> Welcome to the Ireland hiking of our dreams, we hope yours too</strong></h3>
                     <p>If you love hiking, you are fascinated by wonderful views, looking for adventure and you would
                         like to know more about
                         the interesting history about Ireland, then you have come to the right place</p>
@@ -106,17 +104,17 @@
                 </div>
             </div>
             <div class="container">
-                <div class="row content-item-text">
+                <div class="row my-5 content-item-text">
                     <div class="col-12">
-                        <h2>Tour option to chose</h2>
+                        <h2><i class="fab fas fas fa-hiking"></i>  Tour option to chose :</h2>
                         <p> We are organizing hiking tours from half day up to three days including a certified tour
                             guide with a high sense of humor and include
                             different variations for the trails in the region you choose to go to, depending on your
                             time, desire, age and level of advancement,
                             we will select and organize a trip for you. The price is estimated depending on the number
-                            of days you choose, season, accommodation
-                            and food you choose. Contact us for more information. Tell us what you expect and we will
-                            organize a trip for you.
+                            of days you choose, season, accommodation and food you choose.  Tell us what you expect and we will organize a trip for you.<br>
+                             <a href="mailto:thehikers@ireland.ie"  class="contact-email" aria-label="Our Email Address"><strong><i class="fas fa-envelope" aria-hidden="true"></i>
+                            Contact us for more information.</strong></a>
                         </p>
                     </div>
                 </div>
@@ -124,28 +122,28 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-4">
+                <div class="col-md">
                     <div class="card card-body">
                         <img src="" class="card-picture" alt="">
                         <div class="card-desc">
-                            ???
+                            <h2>Wiclow Mountain Tours</h2>
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md">
                     <div class="card card-body">
                         <img src="" class="card-picture" alt="">
                         <div class="card-body-desc">
-                            ???
+                            Connemara mountain Tours
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-md">
                         <div class="card card-body">
                             <img src="" class="card-picture" alt="">
                             <div class="card-body-desc">
-                                ???
+                                Cliffs of Moher Tours
                             </div>
                         </div>
                     </div>
