add new gallery folder in images folder and images for gallery

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-about" href="#">About/Tours</a>
+                            <a class="nav-link underline" id="navbar-color-about" href="#about">About/Tours</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-gallery" href="#">Gallery</a>
+                            <a class="nav-link underline" id="navbar-color-gallery" href="#gallery">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-contact" href="#">Contact</a>
+                            <a class="nav-link underline" id="navbar-color-contact" href="#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -54,12 +54,12 @@
                 <div class="col-12">
                     <div class=" welcome-sign">
                         <div class="welcome jumbotron text-center ">
-                            <h1 class="welcome-sign-top">...Hiking In Ireland And Much More ...</h1>
+                            <h1 class="welcome-sign-top">...Unforgettable Hiking In Ireland...</h1>
 
                             <p class="welcome-sign-bottom">Travelling shouldn't be just a tour, It should be a tale.<br>
                                 And we are striving to make it a very special one</p>
 
-                            <p class="welcome-sign-botom">
+                            <p class="sign-button">
                                 <a class="btn btn-primary btn-lg" href="contact.html" role="button">Book a tour with
                                     us!</a>
                             </p>
@@ -70,7 +70,7 @@
         </div>
     </section>
     <!------------------------ About/Tours page ------------------------>
-    <section>
+    <section id="About">
         <div class="container ">
             <div class="row heading-text">
                 <div class="col-12">
@@ -163,7 +163,7 @@
         </div>
 
 
-        <section>
+        <section id="gallery">
             <!------------------------ Gallery page ------------------------------>
             <div class="container">
                 <div class="row heading-text">
@@ -172,7 +172,13 @@
                     </div>
                 </div>
             </div>
+        <div id="gallery">
 
+
+
+
+            
+        </div>
 
 
 
@@ -255,7 +261,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12 text-center">
-                                    <button type="submit" class="btn btn-primary" value="Send" aria-label="Send Form">Send</button>
+                                    <button type="submit" class="btn btn-primary  btn-lg contact-sent-btn" value="Send" aria-label="Send Form">Send</button>
                                 </div>
                             </div>
                         </fieldset>
