add more images and remove unnesessary,new sections for background images

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                 </div>
             </div>
         </div>
+</section>
+ <section id="image-tours"></section>
+    <section id="tours">   
         <div class="container">
             <div class="row my-5 content-item-text">
                 <div class="col-12">
@@ -161,39 +164,24 @@
                 </div>
             </div>
         </div>
-
+    </section>
 
         <section id="gallery">
             <!------------------------ Gallery page ------------------------------>
+            <div class="gallery">
             <div class="container">
                 <div class="row heading-text">
-                    <div class="col-12">
+                    <div class="col-m">
                         <h1>Gallery</h1>
                     </div>
                 </div>
             </div>
-        <div id="gallery">
+            <div class="gallery">
 
-
-
-
-            
-        </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
+            </div>
+         </div>
         </section>
-
+ <section id="image-contact"></section>
         <section id="contact">
             <!----------------- Contact and Enquiry Form page --------------------->
             <div class="container">
@@ -268,6 +256,7 @@
                     </form>
                 </div>
             </div>
+           
         </section>
 
 
