add change logo width and height from % to px

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <div class="card card-body">
                             <img src="assets/images/about-team.jpg" class="card-img" alt="The hikers team">
                             <div class="card-desc">
-                                <h3>Meet our team</h3>
+                                <h3>Meet Our Team</h3>
                             </div>
                         </div>
                     </div>
